--- a/style.css
+++ b/style.css
@@ -166,3 +166,40 @@ body{
     padding: 8px;
     border-radius: 20px;
 }
+
+.footer .footer__conteudo{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 11px 24px 7px 15px;
+    padding-bottom: 25px;
+    margin: 10px 10px;
+    background-image: linear-gradient(90deg,#af2896,#509bf5);
+}
+
+.footer .footer__conteudo .title{
+    color: #fff;
+    font-family: "DM Sans", sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.footer .footer__conteudo .subtitle{
+    color: #fff;
+    font-family: "DM Sans", sans-serif;
+    font-weight: 400;
+}
+
+.footer .footer__conteudo .footer__button{
+    background-color: #fff;
+    font-size: 1rem;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    border: 0;
+    border-radius: 9999px;
+    padding: 8px 32px;
+    margin-right: 60px;
+}
