--- a/src/assets/styles/sidebar-footer.css
+++ b/src/assets/styles/sidebar-footer.css
@@ -172,6 +172,7 @@ body{
     left: 0;
     right: 0;
     padding: 15px 40px;
+    margin: 10px 10px;
     background-image: linear-gradient(90deg,#af2896,#509bf5);
 }
 
@@ -181,7 +182,6 @@ body{
 
 .footer .footer__title{
     color: #fff;
-    
     font-weight: 700;
     font-size: 14px;
     margin-bottom: 10px;
